Add wizard's tab for selecting Scala sources folder

--- a/scaladesigner/src/main/resources/org/modelio/module/scaladesigner/i18n/messages.properties
+++ b/scaladesigner/src/main/resources/org/modelio/module/scaladesigner/i18n/messages.properties
@@ -104,8 +104,8 @@ Gui.Generation.ReportDialogMessage                                     = Errors 
 Gui.Generation.ReportDialogTitle                                       = Problems
 Gui.ScalaReverseWizardView.BinaryContentTab.Name                        = Content preview
 Gui.ScalaReverseWizardView.BinaryContentTab.Title                       = Choose the elements to reverse or ignore
-Gui.ScalaReverseWizardView.ClasspathTab.Name                            = Project's jars
-Gui.ScalaReverseWizardView.ClasspathTab.Title                           = Select project's jars to use during reverse
+Gui.ScalaReverseWizardView.SourcePathTab.Name                            = Scala's sources
+Gui.ScalaReverseWizardView.SourcePathTab.Title                           = Select folder where Scala's sources are located
 Gui.ScalaReverseWizardView.ExternalJarsTab.Name                         = Reverse's jars
 Gui.ScalaReverseWizardView.ExternalJarsTab.Title                        = Add the libraries of the application to reverse
 Gui.ScalaReverseWizardView.ExternalJarsTab.add                          = Add external jar
