[UI] Correct tab for selecting Scala compiler

--- a/scaladesigner/src/main/resources/org/modelio/module/scaladesigner/i18n/messages.properties
+++ b/scaladesigner/src/main/resources/org/modelio/module/scaladesigner/i18n/messages.properties
@@ -10,6 +10,9 @@ Gui.ScalaReverseWizardView.ExternalJarsTab.add                         = Add ext
 Gui.ScalaReverseWizardView.FileChooserTab.Name                         = Files to reverse
 Gui.ScalaReverseWizardView.FileChooserTab.Preview                      = Content of {0}
 Gui.ScalaReverseWizardView.FileChooserTab.Title                        = Choose the files to reverse ({0})
+Gui.ScalaReverseWizardView.CompilerChooserTab.Name                     = Scala compiler file
+Gui.ScalaReverseWizardView.CompilerChooserTab.Preview                  = Content of {0}
+Gui.ScalaReverseWizardView.CompilerChooserTab.Title                    = Choose Scala compiler file ({0})
 Gui.ScalaReverseWizardView.NextButton                                  = Next >
 Gui.ScalaReverseWizardView.OkButton                                    = Reverse
 Gui.ScalaReverseWizardView.PreviousButton                              = < Previous
