[UI] Tree shows parent directory with checked file if initial directory is file

--- a/scaladesigner/src/main/resources/org/modelio/module/scaladesigner/i18n/messages.properties
+++ b/scaladesigner/src/main/resources/org/modelio/module/scaladesigner/i18n/messages.properties
@@ -24,3 +24,5 @@ Ui.Parameter.ScalaSources.Label                                        = Scala s
 Ui.Parameter.ScalaSources.Description                                  = Directory where Scala's sources are located
 Ui.Parameter.ScalaCompiler.Label                                       = Scala compiler
 Ui.Parameter.ScalaCompiler.Description                                 = Scala compiler (scalac) file
+
+Info.Session.Reverse                                                  = Reverse
