Add progress of reverse process

--- a/scaladesigner/src/main/resources/org/modelio/module/scaladesigner/i18n/messages.properties
+++ b/scaladesigner/src/main/resources/org/modelio/module/scaladesigner/i18n/messages.properties
@@ -26,3 +26,20 @@ Ui.Parameter.ScalaCompiler.Label                                       = Scala c
 Ui.Parameter.ScalaCompiler.Description                                 = Scala compiler (scalac) file
 
 Info.Session.Reverse                                                  = Reverse
+
+Error.UnexpectedException                                             = Unexpected exception encountered.
+Error.ReverseCanceled                                                 = Reverse canceled
+Error.ReverseCanceled.Description                                     = An error occurred during the reverse, preventing the model from being updated.
+
+
+Gui.Reverse.GeneratingASTs                                             = Generating ASTs...
+Gui.Reverse.CreatingAstModels                                            = Creating AST models...
+Gui.Reverse.CreatingAstModel                                             = Create AST model of {0}
+Gui.Reverse.ProcessingAstModels                                       = Processing AST models...
+Gui.Reverse.ProcessingAstModel                                       = Processing AST model: {0} of {1}
+
+Info.ProgressBar.ElapsedTime              = Elapsed time:
+Info.ProgressBar.Generating               = Generating {0} ...
+Info.ProgressBar.RemainingTime            = Remaining time:
+Info.ProgressBar.Reverse.Parsing          = Parsing: {0}
+Info.ProgressBar.Updating                 = Updating {0} ...
