Add container scanner as the first step of Ast2Modelio process

--- a/scaladesigner/src/main/resources/org/modelio/module/scaladesigner/i18n/messages.properties
+++ b/scaladesigner/src/main/resources/org/modelio/module/scaladesigner/i18n/messages.properties
@@ -1,45 +1,39 @@
 ui.parameter.ParameterGroup.Name=Parameter Group Name
 ui.parameter.DisplayParameter.Label=Parameter Label
-
-Gui.Generation.ReportDialogMessage                                     = Errors and warnings
-Gui.Generation.ReportDialogTitle                                       = Problems
-Gui.ScalaReverseWizardView.SourcePathTab.Name                          = Scala's sources
-Gui.ScalaReverseWizardView.SourcePathTab.Title                         = Select folder where Scala's sources are located
-Gui.ScalaReverseWizardView.ExternalJarsTab.add                         = Add external jar
-
-Gui.ScalaReverseWizardView.FileChooserTab.Name                         = Files to reverse
-Gui.ScalaReverseWizardView.FileChooserTab.Preview                      = Content of {0}
-Gui.ScalaReverseWizardView.FileChooserTab.Title                        = Choose the files to reverse ({0})
-Gui.ScalaReverseWizardView.CompilerChooserTab.Name                     = Scala compiler file
-Gui.ScalaReverseWizardView.CompilerChooserTab.Preview                  = Content of {0}
-Gui.ScalaReverseWizardView.CompilerChooserTab.Title                    = Choose Scala compiler file ({0})
-Gui.ScalaReverseWizardView.NextButton                                  = Next >
-Gui.ScalaReverseWizardView.OkButton                                    = Reverse
-Gui.ScalaReverseWizardView.PreviousButton                              = < Previous
-Gui.ScalaReverseWizardView.Title                                       = Scala Reverse
-Gui.ScalaReverseWizardView.WindowName                                  = Scala Reverse
+Gui.Generation.ReportDialogMessage=Errors and warnings
+Gui.Generation.ReportDialogTitle=Problems
+Gui.ScalaReverseWizardView.SourcePathTab.Name=Scala's sources
+Gui.ScalaReverseWizardView.SourcePathTab.Title=Select folder where Scala's sources are located
+Gui.ScalaReverseWizardView.ExternalJarsTab.add=Add external jar
+Gui.ScalaReverseWizardView.FileChooserTab.Name=Files to reverse
+Gui.ScalaReverseWizardView.FileChooserTab.Preview=Content of {0}
+Gui.ScalaReverseWizardView.FileChooserTab.Title=Choose the files to reverse ({0})
+Gui.ScalaReverseWizardView.CompilerChooserTab.Name=Scala compiler file
+Gui.ScalaReverseWizardView.CompilerChooserTab.Preview=Content of {0}
+Gui.ScalaReverseWizardView.CompilerChooserTab.Title=Choose Scala compiler file ({0})
+Gui.ScalaReverseWizardView.NextButton=Next >
+Gui.ScalaReverseWizardView.OkButton=Reverse
+Gui.ScalaReverseWizardView.PreviousButton=< Previous
+Gui.ScalaReverseWizardView.Title=Scala Reverse
+Gui.ScalaReverseWizardView.WindowName=Scala Reverse
 # Scala module user properties
-Ui.Parameter.GroupModel.Locations                                    = Locations
-Ui.Parameter.ScalaSources.Label                                        = Scala sources
-Ui.Parameter.ScalaSources.Description                                  = Directory where Scala's sources are located
-Ui.Parameter.ScalaCompiler.Label                                       = Scala compiler
-Ui.Parameter.ScalaCompiler.Description                                 = Scala compiler (scalac) file
-
-Info.Session.Reverse                                                  = Reverse
-
-Error.UnexpectedException                                             = Unexpected exception encountered.
-Error.ReverseCanceled                                                 = Reverse canceled
-Error.ReverseCanceled.Description                                     = An error occurred during the reverse, preventing the model from being updated.
-
-
-Gui.Reverse.GeneratingASTs                                             = Generating ASTs...
-Gui.Reverse.CreatingAstModels                                            = Creating AST models...
-Gui.Reverse.CreatingAstModel                                             = Create AST model of {0}
-Gui.Reverse.ProcessingAstModels                                       = Processing AST models...
-Gui.Reverse.ProcessingAstModel                                       = Processing AST model: {0} of {1}
-
-Info.ProgressBar.ElapsedTime              = Elapsed time:
-Info.ProgressBar.Generating               = Generating {0} ...
-Info.ProgressBar.RemainingTime            = Remaining time:
-Info.ProgressBar.Reverse.Parsing          = Parsing: {0}
-Info.ProgressBar.Updating                 = Updating {0} ...
+Ui.Parameter.GroupModel.Locations=Locations
+Ui.Parameter.ScalaSources.Label=Scala sources
+Ui.Parameter.ScalaSources.Description=Directory where Scala's sources are located
+Ui.Parameter.ScalaCompiler.Label=Scala compiler
+Ui.Parameter.ScalaCompiler.Description=Scala compiler (scalac) file
+Info.Session.Reverse=Reverse
+Error.UnexpectedException=Unexpected exception encountered.
+Error.ReverseCanceled=Reverse canceled
+Error.ReverseCanceled.Description=An error occurred during the reverse, preventing the model from being updated.
+Gui.Reverse.GeneratingASTs=Generating ASTs...
+Gui.Reverse.CreatingAstModels=Creating AST models...
+Gui.Reverse.CreatingAstModel=Create AST model of {0}
+Gui.Reverse.ProcessingAstModels=Processing AST models...
+Gui.Reverse.ScanningContainerElements=Scanning container elements, model {0} of {1}
+Gui.Reverse.CreatingUMLElements=Creating UML elements, model {0} of {1}
+Info.ProgressBar.ElapsedTime=Elapsed time:
+Info.ProgressBar.Generating=Generating {0} ...
+Info.ProgressBar.RemainingTime=Remaining time:
+Info.ProgressBar.Reverse.Parsing=Parsing: {0}
+Info.ProgressBar.Updating=Updating {0} ...
