Don't parse if there are some errors + rollback transaction in case of exception

--- a/scaladesigner/src/main/resources/org/modelio/module/scaladesigner/i18n/messages.properties
+++ b/scaladesigner/src/main/resources/org/modelio/module/scaladesigner/i18n/messages.properties
@@ -23,6 +23,8 @@ Ui.Parameter.ScalaSources.Description=Directory where Scala's sources are locate
 Ui.Parameter.ScalaCompiler.Label=Scala compiler
 Ui.Parameter.ScalaCompiler.Description=Scala compiler (scalac) file
 Info.Session.Reverse=Reverse
+Error.InvalidSourceException = Error in file {0} at Line {1}
+Error.InvalidSourceException.Description = Error: {0}\nLine: {1}
 Error.UnexpectedException=Unexpected exception encountered.
 Error.ReverseCanceled=Reverse canceled
 Error.ReverseCanceled.Description=An error occurred during the reverse, preventing the model from being updated.
